--- a/src/main/resources/assets/geode/models/block/wrappist_cluster.json
+++ b/src/main/resources/assets/geode/models/block/wrappist_cluster.json
@@ -1,6 +1,6 @@
 {
   "parent": "minecraft:block/cross",
   "textures": {
-    "cross": "geode:blocks/large_enderethyst_bud"
+    "cross": "geode:blocks/wrappist_cluster"
   }
 }
