--- a/src/main/resources/data/geode/loot_tables/blocks/wrappist_cluster.json
+++ b/src/main/resources/data/geode/loot_tables/blocks/wrappist_cluster.json
@@ -25,7 +25,7 @@
                   }
                 }
               ],
-              "name": "geode:wrappsit_cluster"
+              "name": "geode:wrappist_cluster"
             },
             {
               "type": "minecraft:alternatives",
