--- a/src/main/resources/data/geode/recipes/wrappsit_block.json
+++ b/src/main/resources/data/geode/recipes/wrappsit_block.json
@@ -6,20 +6,20 @@
   ],
   "key": {
     "0": {
-      "item": "geode:wrappsit_cluster"
+      "item": "geode:wrappist_shard"
     },
     "1": {
-      "item": "geode:wrappsit_cluster"
+      "item": "geode:wrappist_shard"
     },
     "2": {
-      "item": "geode:wrappsit_cluster"
+      "item": "geode:wrappist_shard"
     },
     "3": {
-      "item": "geode:wrappsit_cluster"
+      "item": "geode:wrappist_shard"
     }
   },
   "result": {
-    "item": "geode:wrappsit_block",
+    "item": "geode:wrappist_block",
     "count": 1
   }
 }
